tests/__snapshots__/validation-toBeAssignableWith-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  3 | describe("argument for 'source'", () => {
  4 |   test("must be provided", () => {
  5 |     expect().type.toBeAssignableWith<{ test: void }>();
    |     ~~~~~~
  6 |   });
  7 | });
  8 | 

      at ./__typetests__/toBeAssignableWith.tst.ts:5:5

Error: An argument for 'target' or type argument for 'Target' must be provided.

   9 | describe("argument for 'target'", () => {
  10 |   test("must be provided", () => {
  11 |     expect<{ test: void }>().type.toBeAssignableWith();
     |                                   ~~~~~~~~~~~~~~~~~~
  12 |   });
  13 | });
  14 | 

       at ./__typetests__/toBeAssignableWith.tst.ts:11:35

